# static/swagger.json
@@ -30,6 +30,14 @@
         "description": "Find out more",
         "url": "http://swagger.io"
       }
+    },
+    {
+      "name": "price",
+      "description": "All price API",
+      "externalDocs": {
+        "description": "Find out more",
+        "url": "http://swagger.io"
+      }
     }
   ],
   "paths": {
@@ -203,22 +211,22 @@
           {
             "name": "query",
             "in": "query",
-            "description": "Hashed query string pandas",
+            "description": "query string pandas",
             "required": false,
             "schema": {
               "type": "string"
             },
-            "example": "id%20%3D%3D%201"
+            "example": "id == 1"
           },
           {
             "name": "sort",
             "in": "query",
-            "description": "Hashed order",
+            "description": "order by",
             "required": false,
             "schema": {
               "type": "string"
             },
-            "example": "%7B%20%27key%27%3A%20%27id%27%2C%20%27value%27%3A%20%27ascending%27%20%7D"
+            "example": "{ 'key': 'id', 'value': 'ascending' }"
           }
         ],
         "responses": {
@@ -248,7 +256,7 @@
         "tags": [
           "user"
         ],
-        "summary": "Delete userprime",
+        "summary": "Delete user id prime",
         "description": "This can only be done by the logged in user.",
         "operationId": "deleteUserprime",
         "requestBody": {
@@ -298,9 +306,7 @@
         "summary": "Get userfive list",
         "description": "get userfive list",
         "operationId": "getUserListfive",
-        "parameters": [
-          
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": "successful operation",
@@ -328,7 +334,7 @@
         "tags": [
           "user"
         ],
-        "summary": "Get user by user idprime",
+        "summary": "Get user by user id prime",
         "description": "get full detail user by user idprime",
         "operationId": "getUserByIdprime",
         "parameters": [
@@ -413,6 +419,268 @@
           }
         }
       }
+    },
+    "/api/price/max": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price max",
+        "description": "get Price max",
+        "operationId": "getPricemax",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
+    },
+    "/api/price/min": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price min",
+        "description": "get Price min",
+        "operationId": "getPricemin",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
+    },
+    "/api/price/avg": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price avg",
+        "description": "get Price avg",
+        "operationId": "getPriceavg",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
+    },
+    "/api/price/total": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price total",
+        "description": "get Price total",
+        "operationId": "getPricetotal",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
+    },
+    "/api/price/median": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price median",
+        "description": "get Price median",
+        "operationId": "getPricemedian",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
+    },
+    "/api/price/quantile": {
+      "get": {
+        "tags": [
+          "price"
+        ],
+        "summary": "Get Price quantile",
+        "description": "get Price quantile",
+        "operationId": "getPricequantile",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "query string pandas",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "example": "id == 1"
+          },
+          {
+            "name": "quantile",
+            "in": "query",
+            "description": "Quantile",
+            "required": false,
+            "schema": {
+              "type": "float"
+            },
+            "example": 0.5
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Price"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -448,6 +716,10 @@
           "ip_address": {
             "type": "string",
             "example": "112.122.22"
+          },
+          "price": {
+            "type": "integer",
+            "example": "1239000"
           }
         },
         "xml": {
@@ -480,6 +752,10 @@
           "ip_address": {
             "type": "string",
             "example": "112.122.22"
+          },
+          "price": {
+            "type": "integer",
+            "example": "1239000"
           }
         },
         "xml": {
@@ -514,15 +790,9 @@
           }
         }
       },
-      "UserListfive": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "type": {
-              "$ref": "#/components/schemas/UserListfive"
-            }
-          }
-        }
+      "price": {
+        "type": "float",
+        "example": "123900.0"
       }
     },
     "securitySchemes": {
